--- a/GSR_debugging.ipynb
+++ b/GSR_debugging.ipynb
@@ -169,7 +169,9 @@
     "wait_for_ack()\n",
     "numbytes = 0\n",
     "ddata = b''\n",
-    "framesize = 1 + 3 + 2*3 + 2*3 + 2*3 + 7\n",
+    "framesize = 1 + 3 + 2*3 + 2*3 + 2*3 + 2 + 2\n",
+    "\n",
+    "testdata = []\n",
     "while True:\n",
     "    while numbytes < framesize:\n",
     "        ddata += ser.read(framesize)\n",
@@ -185,24 +187,37 @@
     "    lin_acc_cal_x = accel_calc(lin_acc_raw_x)\n",
     "    lin_acc_cal_y = accel_calc(lin_acc_raw_y)\n",
     "    lin_acc_cal_z = accel_calc(lin_acc_raw_z)\n",
-    "    \n",
-    "    (ang_vel_raw_x, ang_vel_raw_y, ang_vel_raw_z) = struct.unpack('>hhh', data[10:16])\n",
+    "\n",
+    "    (PPG_raw, GSR_raw) = struct.unpack('HH', data[10:14])\n",
+    "\n",
+    "    # convert PPG to milliVolt value\n",
+    "    PPG_mv = PPG_raw * (3000.0/4095.0)\n",
+    "    # GSR range\n",
+    "    Range = ((GSR_raw >> 14) & 0xff)\n",
+    "    if(Range == 0):\n",
+    "        Rf = 40.2   # kohm\n",
+    "    elif(Range == 1):\n",
+    "        Rf = 287.0  # kohm\n",
+    "    elif(Range == 2):\n",
+    "        Rf = 1000.0 # kohm\n",
+    "    elif(Range == 3):\n",
+    "        Rf = 3300.0 # kohm\n",
+    "    # convert GSR to kohm value\n",
+    "    gsr_to_volts = (GSR_raw & 0x3fff) * (3.0/4095.0)\n",
+    "    GSR_ohm = Rf/( (gsr_to_volts /0.5) - 1.0)\n",
+    "\n",
+    "    (ang_vel_raw_x, ang_vel_raw_y, ang_vel_raw_z) = struct.unpack('>hhh', data[14:20])\n",
     "    ang_vel_cal_x = gyro_calc(ang_vel_raw_x)\n",
     "    ang_vel_cal_y = gyro_calc(ang_vel_raw_y)\n",
     "    ang_vel_cal_z = gyro_calc(ang_vel_raw_z)\n",
     "\n",
-    "    (mag_fld_raw_x, mag_fld_raw_z, mag_fld_raw_y) = struct.unpack('>hhh', data[16:22])\n",
+    "    (mag_fld_raw_x, mag_fld_raw_z, mag_fld_raw_y) = struct.unpack('>hhh', data[20:26])\n",
     "    mag_fld_cal_x = mag_calc_xy(mag_fld_raw_x)\n",
     "    mag_fld_cal_y = mag_calc_xy(mag_fld_raw_y)\n",
     "    mag_fld_cal_z = mag_calc_z(mag_fld_raw_z)\n",
     "\n",
-    "    emg_ch1_raw = struct.unpack('>i', (data[23:26] + b'\\0'))[0] >> 8\n",
-    "    emg_ch2_raw = struct.unpack('>i', (data[26:29] + b'\\0'))[0] >> 8\n",
-    "\n",
-    "    emg_ch1_cal = emg_calc(emg_ch1_raw)\n",
-    "    emg_ch2_cal = emg_calc(emg_ch2_raw)  \n",
-    "\n",
-    "    print(lin_acc_cal_x)\n",
+    "    testdata.append(packettype)\n",
+    "    print(packettype)\n",
     "    "
    ]
   },
@@ -212,25 +227,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#framesize = 1 + 3 + 3 * 2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "testdata = np.array(testdata)\n",
     "\n",
-    "#prev_time = datetime.datetime.now()\n",
-    "#while True:\n",
-    "#    ddata = b''\n",
-    "#    numbytes = 0\n",
-    "#    read = True\n",
-    "#    while read == True:\n",
-    "#        flag = ser.read(1)\n",
-    "#        flag = struct.unpack('B', flag)\n",
-    "#        if flag[0] == 0:\n",
-    "#            ddata += ser.read(framesize-1)\n",
-    "##            read = False\n",
-    "#    current_time = datetime.datetime.now()\n",
-    "#    print(current_time - prev_time)\n",
-    "#    prev_time = current_time\n",
-    "    # (accel_x, accel_y, accel_z) = struct.unpack('HHH', ddata[3:9])\n",
-    "    # accel_y_cal = accel_calc(accel_y)\n",
-    "    # print(accel_y_cal)\n"
+    "plt.plot(testdata)"
    ]
   },
   {
